fixed layout issues. added actual text. added social icons.

--- a/assets/stylesheets/sass/modules/_colors.scss
+++ b/assets/stylesheets/sass/modules/_colors.scss
@@ -5,3 +5,4 @@ $tan: #e4d5a8;
 $charcoal: #3d3f39;
 $brick: #af4b37;
 $aqua: #7ecabe;
+$indatus: #F05F3B;
